<resources>
    <string name="app_name">天天圈</string>
    <string name="action_settings">Settings</string>
    <string name="home_scann">扫一扫</string>
    <string name="home_shake">摇一摇</string>
    <string name="home_text">首页</string>
    <string name="home_new_topic">新话题</string>
    <string name="empty">网络错误</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="update_info">更新信息</string>
    <string name="update_dialog_title">呱唧更新信息</string>
    <string name="update_version">版本:1.0</string>
    <string name="tvcircle_search_edit_hint">搜索用户、 圈子和话题</string>
    <string name="create_circle">创建圈子</string>
    <string name="back">返回</string>
    <string name="tv_circle">首页</string>
    <string name="circle">圈子</string>
    <string name="topic">话题</string>
    <string name="new_topic">新话题</string>
    <string name="user">用户</string>
    <string name="message">消息</string>
    <string name="search">搜索</string>
    <string name="search_circle_text_empty">没有搜到圈子</string>
    <string name="search_user_text_empty">没有搜到用户</string>
    <string name="search_topic_text_empty">没有搜到话题</string>
    <string name="toast_last_page_tip">已经到最后一页了</string>
    <string name="add">加入</string>
    <string name="news">资讯</string>
    <string name="video">视频</string>
    <string name="news_details_previous_text">上一篇</string>
    <string name="news_details_next_string">下一篇</string>
    <string name="hot">热门</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="like">喜欢</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="like_count">%s条喜欢</string>
    <string name="comment_count">%s条评论</string>
    <string name="intro">简介</string>
    <string name="circle_member">圈子成员</string>
    <string name="join_circle">加入圈子</string>
    <string name="publish_topic">发话题</string>
    <string name="circle_intro">圈子简介</string>
    <string name="member">成员</string>
    <string name="master">领主</string>
    <string name="create_time">创建时间</string>
    <string name="circle_name">圈子名称</string>
    <string name="topic_empty">还没有任何话题,赶快来发布吧</string>
    <string name="videos_empty">还没有任何视频</string>
    <string name="news_empty">还没有任何资讯</string>
    <string name="login_title">登录</string>
    <string name="my">我的</string>
    <string name="shop">商城</string>
    <string name="using_account_login">使用以下帐号登录</string>
    <string name="sina">新浪微博</string>
    <string name="tencent">腾讯帐号</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_tip">还没有帐号?\n赶紧来注册一个吧</string>
    <string name="register_title">注册</string>
    <string name="setting_photo">设置你的头像</string>
    <string name="nick_name">昵称</string>
    <string name="email_and_phone">邮箱或手机号码</string>
    <string name="register_commit">提 交</string>
    <string name="take_picture">拍照</string>
    <string name="selet_local_picture">选择本地图片</string>
    <string name="sub_topic">发布话题</string>
    <string name="add_circle">加入圈子</string>
    <string name="dynamic_condition">动态</string>
    <string name="integral">积分</string>
    <string name="defulat_signature">写点什么吧!</string>
    <string name="settings">设置</string>
    <string name="gallery_empty_1">还没上传图片!</string>
    <string name="gallery_empty_2">赶快上传图片展示自我风采</string>
    <string name="my_photo">我的相册</string>
    <string name="add_pic">添加</string>
    <string name="empty_dynamic_condition">暂时没有动态!</string>
    <string name="empty_circle">还没有创建任何圈子</string>
    <string name="ding">顶</string>
    <string name="reply">回复</string>
    <string name="empty_photo_list">还没有任何相片哦!</string>
    <string name="upload_pic_complete">上传图片成功啦</string>
    <string name="upload_pic_error">上传图片出错啦</string>
    <string name="upload_image_text">正在上传图片</string>
    <string name="delete_image_text">正在删除图片</string>
    <string name="sd_no_exists">请检查sd卡是否存在</string>
    <string name="choose_image">请选择图片文件!</string>
    <string name="delete">删除</string>
    <string name="follow_count">关注 ( %1$d )</string>
    <string name="fans_count">粉丝 ( %1$d )</string>
    <string name="add_follow">正在添加关注</string>
    <string name="delete_follow">正在取消关注</string>
    <string name="add_follow_succeed">添加关注成功</string>
    <string name="delete_follow_succeed">取消关注成功</string>
    <string name="follow_empty">还没有关注任何人!</string>
    <string name="fans_empty">还没有粉丝</string>
    <string name="personal_add_circle">加入的圈子</string>
    <string name="join_circle_empty">还没有加入任何圈子</string>
    <string name="personal_sub_topic">发布的话题</string>
    <string name="personal_topic_empty">还没有发布任何话题</string>
    <string name="setting">设置</string>
    <string name="personal_setting">个人设置</string>
    <string name="base_info_modification">基础信息修改</string>
    <string name="modification_password">修改密码</string>
    <string name="blacklist">黑名单</string>
    <string name="setting_account_binding">帐号绑定</string>
    <string name="binding">绑定</string>
    <string name="already_binding">已绑定</string>
    <string name="mobile_number">手机号码</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="weixin_friend">微信朋友圈</string>
    <string name="system_correlation">系统相关</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_succeed">清除缓存成功</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于我们</string>
    <string name="rest">其他</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="update_tips">正在检查新版本</string>
    <string name="save">保存</string>
    <string name="modification_avatar">修改头像</string>
    <string name="cover">封面</string>
    <string name="modification_cover">修改封面</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="autograph">个性签名</string>
    <string name="select_sex">请选择性别</string>
    <string name="modification_sub">正在提交数据</string>
    <string name="update_info_succeed">修改资料成功</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="submit">提   交</string>
    <string name="password_inconformity">密码不一致</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="new_password_cannot_empty">新密码不能为空</string>
    <string name="affirm_password_cannot_empty">确认密码不能为空</string>
    <string name="modification_password_succeed">修改密码成功</string>
    <string name="binging_mobile_number">绑定手机号码</string>
    <string name="next">下一步</string>
    <string name="mobile_number_cannot_empty">手机号码不能为空</string>
    <string name="bining_mobile_numbers_tip">绑定手机可以在你忘记密码的时候更好的帮你找回你的密码.天天圈不会公开你的信息给其他的用户,请放心填写.</string>
    <string name="auth_code_tip">天天圈将发送一个验证码给您，请填写您收到的验证码（这个过程可能需要几分钟时间请不要离开当前页面，如果您没有收到验证码请点击重新发送按钮天天圈将再次给你发送一次）</string>
    <string name="auth_code">验证码</string>
    <string name="afresh_send">重新发送</string>
    <string name="auth_code_cannot_empty">验证码不能为空</string>
    <string name="auth_mobile_succeed">验证手机成功</string>
    <string name="opinion_feedback_tip">说点什么</string>
    <string name="opinion_feedback_cannot_empty">内容不能为空</string>
    <string name="opinion_feedback_succeed">谢谢您提出宝贵的意见</string>
    <string name="shops_empty">暂时还没有商品，敬请期待</string>
    <string name="shop_mobile_binding_tip">为方便天天圈将兑换的礼品送达到你的手中请认真填写你的手机号码（仅做礼品发放时联系使用，不会公开你的个人信息给其它用户）</string>
    <string name="price">积分</string>
    <string name="ecchange">兑换</string>
    <string name="tip_score_deficiency">积分不足</string>
    <string name="apply">征集</string>
    <string name="personal_information">个人资料</string>
    <string name="name">姓名</string>
    <string name="birth_data">出生年月</string>
    <string name="native_place">籍贯</string>
    <string name="location">所在地</string>
    <string name="contact_information">联系方式</string>
    <string name="performance">表演相关</string>
    <string name="performance_type">曲艺类型</string>
    <string name="pressed_recode">按住录音(展示一下你的才艺)</string>
    <string name="others_add_follow">加关注</string>
    <string name="others_un_follow">取消关注</string>
    <string name="send_private_letter">发私信</string>
    <string name="more">更多</string>
    <string name="others_photo">相册</string>
    <string name="report">举报</string>
    <string name="scan_text">将指定图片放入框内,即可自动扫描</string>
    <string name="hot_topic_empty">暂时没有话题</string>
    <string name="attention_topic_empty">暂时没有关注</string>
    <string name="rule">规则</string>
    <string name="start">开  始</string>
    <string name="firend_ranking">好友排名</string>
    <string name="total_ranking">总排名</string>
    <string name="answer">答题</string>
    <string name="one_more_chance">再来一次</string>
    <string name="answer_correct_count">答对%1$d题</string>
    <string name="use_time_second">共用时%1$d秒</string>
    <string name="release">发布</string>
    <string name="topic_empty_tip_1">还没有任何评论</string>
    <string name="topic_empty_tip_2">赶快来说点什么吧</string>
    <string name="topic_report_content">举报该内容</string>
    <string name="topic_ding_jia">已经顶过了</string>
    <string name="official_submit_topic_title_hint">填写标题</string>
    <string name="official_submit_topic_content_hint">话题内容</string>
    <string name="tongbudao">同步到</string>
    <string name="submit_topic_title_tip">标题不能为空</string>
    <string name="submit_topic_content_tip">内容不能为空</string>
    <string name="list_foot_text">已显示全部内容</string>
    <string name="no_link_tips">点击屏幕 重新加载</string>
    <string name="share_tip_text">分享到</string>
    <string name="collect">报名</string>
    <string name="consent">同意</string>
    <string name="base_information">基础资料</string>
    <string name="man_information">男方资料</string>
    <string name="woman_information">女方资料</string>
    <string name="primary_contradiction">主要矛盾 (140字以内)</string>
    <string name="program_aspiration">上节目意愿</string>
    <string name="only_man_be_willing">男女双方均愿意</string>
    <string name="upload_picture">上传图片</string>
    <string name="my_height">身高(CM)</string>
    <string name="my_weight">体重(KG)</string>
    <string name="education_background">学历</string>
    <string name="profession">职业</string>
    <string name="income">年收入</string>
    <string name="QQ">QQ号</string>
    <string name="confirm">确定</string>
    <string name="now_location">目前所在地</string>
    <string name="now_salary">目前年薪</string>
    <string name="physical_condition">身体状况</string>
    <string name="is_disability">是否残疾</string>
    <string name="email">邮箱</string>
    <string name="life_special_experience">人生特殊经历</string>
    <string name="job_special_experience">工作特殊经历</string>
    <string name="fnms_uplad_image">上传照片(免冠照片)</string>
    <string name="forget_password_title">找回密码</string>
    <string name="forget_password_account_tips">帐号</string>
    <string name="forget_password_tips">输入你注册时使用的帐号和与该帐号绑定的手机号码</string>
    <string name="forget_password_success">天天圈将会重置你的密码，并将该密码发送到你的手机上。请在登录成功后及时修改密码，以确保你的账户安全。</string>
    <string name="skip">跳   过</string>
    <string name="see_details">查看详情</string>
    <string name="my_message">我的消息</string>
    <string name="private_letter">私信</string>
    <string name="notification">通知</string>
    <string name="shake">摇一摇</string>
    <string name="award_record">中奖记录</string>
    <string name="shake_tip">摇动手机 参与互动</string>
    <string name="first_surplus_time">今天你一共有%1$d次机会</string>
    <string name="surplus_time">你还剩%1$d次机会</string>
    <string name="celebrate_you">恭喜你!</string>
    <string name="award_tip">你可以在中奖记录中查看你的中奖信息及想关注意事项</string>
    <string name="share_award">晒奖品</string>
    <string name="sorry">对不起</string>
    <string name="contact_address">联系地址</string>
    <string name="contact_name">联系人姓名</string>
</resources>