<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background">


    <RelativeLayout
        android:id="@+id/login_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/tvcircle_title_color"
        android:paddingBottom="@dimen/title_padding"
        android:paddingTop="@dimen/title_padding" >

    <LinearLayout
        android:id="@+id/others_photo_list_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_tj"
            android:contentDescription="@string/create_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/tvcircle_title_text_color" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/others_photo"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

</LinearLayout>